<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="toolbar_title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="medialibrary">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="darkTheme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="messageSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="message_error">Нет доступных приложений</string>
    <string name="url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_app_text">
        https://practicum.yandex.ru/android-developer/?utm_source=yandex&amp;utm_medium=cpc&amp;utm_campaign=Yan_Sch_RF_Andd_460&amp;utm_content=sty_search%3As_none%3Acid_75977619%3Agid_4960565888%3Akw_обучение+андроид%3Apid_39739564929%3Aaid_12377529103%3Acrid_0%3Arid_39739564929%3Ap_1%3Apty_premium%3Amty_syn%3Amkw_%3Adty_desktop%3Acgcid_16038400%3Arn_Москва%3Arid_213&amp;utm_term=обучение+андроид&amp;yclid=10365713420642156543
    </string>
    <string name="share_subject">Яндекс Практикум</string>
    <string name="share_using">Отправить сообщение</string>
    <string name="email">ola.mzsk@ya.ru</string>
    <string name="mailto">mailto:</string>
    <string name="text_plain">text/plain</string>
    <string name="track_name">track_name</string>
    <string name="track_artist">artist</string>
    <string name="track_time">time</string>
    <string name="not_found_txt">Ничего не нашлось</string>
    <string name="not_internet_txt">Проблемы со связью</string>
    <string name="update_txt">Обновить</string>
    <string name="check_connection_txt">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="history_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="duration">Длительность</string>
    <string name="time">00:00</string>
    <string name="unknown_error">Unknown error\n</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
    <string name="not_found_media">Ваша медиатека пуста</string>
    <string name="not_found_playlist">Вы не создали \nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="name_song">Название композиции</string>
    <string name="name_person">Имя исполнителя</string>
    <string name="title">Title</string>
    <string name="play_pause">play_pause</string>
    <string name="add">add</string>
    <string name="like">like</string>
    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="Create">Создать</string>
    <string name="playlist_positive">Завершить</string>
    <string name="playlist_message">Все несохраненные данные будут потеряны</string>
    <string name="playlist_negative">Отмена</string>
    <string name="playlist_title">Завершить создание плейлиста?</string>
    <string name="playlist_show">Плейлист %1$s создан</string>
    <string name="add_playlist">Добавить в плейлист</string>
    <plurals name="track_plurals">
        <item quantity="zero">нет треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <string name="count_track">0 треков</string>
    <string name="add_track_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_added_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="count_tracks">98 треков</string>
    <string name="loading">Загрузка</string>
    <string name="delete_track_title">Удалить трек</string>
    <string name="delete_track">Вы уверены, что хотите \nудалить трек из плейлиста?</string>
    <string name="ok">Да</string>
    <string name="no">Нет</string>
    <string name="no_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="more_playlist">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_title">Хотите удалить плейлист?</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="share_playlist_text">       </string>
    <string name="minut"> минут</string>
    <string name="no_track">В этом плейлисте \nнет списка треков</string>

    <plurals name="minut_plurals">
        <item quantity="zero"></item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

</resources>