<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/YPBlue"
    android:orientation="vertical"
   >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:title="@string/toolbar_title"
        app:titleTextAppearance="@style/ToolbarTextAppearance"
        app:titleTextColor="@color/white"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/search_button"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/custom_button"
        android:text="@string/search"
        app:icon="@drawable/search"
        />

    <Button
        android:id="@+id/medialibrary_button"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/custom_button"
        android:text="@string/medialibrary"
        app:icon="@drawable/media" />

    <Button
        android:id="@+id/settings_button"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/custom_button"
        android:text="@string/settings"
        app:icon="@drawable/settings" />

</LinearLayout>