<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/darkTheme"
        app:useMaterialThemeColors="false"
        style="@style/MySwitch"
        android:textColor="@color/text_switch"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/shareTv"
        style="@style/setting_text"
        android:text="@string/share"
        app:layout_constraintEnd_toStartOf="@id/shareButton"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/themeSwitcher" />

    <ImageButton
        android:id="@+id/shareButton"
        style="@style/image_button_setting"
        android:contentDescription="@string/share"
        android:src="@drawable/share"
        app:layout_constraintBottom_toBottomOf="@id/shareTv"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/shareTv" />

    <TextView
        android:id="@+id/supportTv"
        style="@style/setting_text"
        android:text="@string/support"
        android:textAppearance="@style/setting_text"
        app:layout_constraintEnd_toStartOf="@id/supportButton"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/shareTv" />

    <ImageButton
        android:id="@+id/supportButton"
        style="@style/image_button_setting"
        android:contentDescription="@string/support"
        android:src="@drawable/support"
        app:layout_constraintBottom_toBottomOf="@+id/supportTv"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@+id/supportTv" />

    <TextView
        android:id="@+id/user_agreementTv"
        style="@style/setting_text"
        android:text="@string/user_agreement"
        app:layout_constraintEnd_toStartOf="@id/user_agreementButton"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/supportTv" />

    <ImageButton
        android:id="@+id/user_agreementButton"
        style="@style/image_button_setting"
        android:contentDescription="@string/user_agreement"
        android:src="@drawable/arrow_forward"
        app:layout_constraintBottom_toBottomOf="@+id/user_agreementTv"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@+id/user_agreementTv" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>