<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".player.ui.PlayerFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/dp24" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/dp24" />

            <ImageView
                android:id="@+id/poster"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp26"
                app:layout_constraintBottom_toTopOf="@id/name"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@color/black"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/name"
                style="@style/player_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp24"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="@dimen/sp22"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/poster"
                tools:text="@string/name_song" />

            <TextView
                android:id="@+id/artist"
                style="@style/player_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="@dimen/sp14"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/name"
                tools:text="@string/name_person" />

            <ImageView
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="54dp"
                android:src="@drawable/button_add"
                app:layout_constraintEnd_toStartOf="@id/play"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/artist"
                android:contentDescription="@null"/>

            <ImageView
                android:id="@+id/play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp16"
                android:src="@drawable/play"
                app:layout_constraintBottom_toBottomOf="@+id/button_add"
                app:layout_constraintEnd_toStartOf="@id/button_like"
                app:layout_constraintStart_toEndOf="@id/button_add"
                app:layout_constraintTop_toTopOf="@+id/button_add"
                android:contentDescription="@null"/>

            <ImageView
                android:id="@+id/button_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/button_like"
                app:layout_constraintBottom_toBottomOf="@+id/play"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toEndOf="@id/play"
                app:layout_constraintTop_toTopOf="@+id/play"
                android:contentDescription="@null"/>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="play,button_like,button_add" />

            <TextView
                android:id="@+id/duration_track"
                style="@style/player_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/time"
                android:textFontWeight="500"
                android:textSize="@dimen/sp14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/barrier" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/dp16" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/dp16" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="right"
                app:constraint_referenced_ids="duration, album,genre,year,country" />


            <TextView
                android:id="@+id/duration_tv"
                style="@style/player_text_details_tv"
                android:layout_marginTop="@dimen/dp20"
                android:text="@string/duration"
                app:layout_constraintEnd_toStartOf="@id/duration"
                app:layout_constraintStart_toStartOf="@id/guideline4"
                app:layout_constraintTop_toBottomOf="@id/duration_track" />

            <TextView
                android:id="@+id/album_tv"
                style="@style/player_text_details_tv"
                android:text="@string/album"
                app:layout_constraintEnd_toStartOf="@id/album"
                app:layout_constraintStart_toStartOf="@id/guideline4"
                app:layout_constraintTop_toBottomOf="@id/duration_tv" />

            <TextView
                android:id="@+id/year_tv"
                style="@style/player_text_details_tv"
                android:text="@string/year"
                app:layout_constraintEnd_toStartOf="@id/year"
                app:layout_constraintStart_toStartOf="@id/guideline4"
                app:layout_constraintTop_toBottomOf="@id/album_tv" />

            <TextView
                android:id="@+id/genre_tv"
                style="@style/player_text_details_tv"
                android:text="@string/genre"
                app:layout_constraintEnd_toStartOf="@id/genre"
                app:layout_constraintStart_toStartOf="@id/guideline4"
                app:layout_constraintTop_toBottomOf="@id/year_tv" />

            <TextView
                android:id="@+id/country_tv"
                style="@style/player_text_details_tv"
                android:layout_marginBottom="@dimen/dp16"
                android:text="@string/country"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/country"
                app:layout_constraintStart_toStartOf="@id/guideline4"
                app:layout_constraintTop_toBottomOf="@id/genre_tv" />

            <TextView
                android:id="@+id/duration"
                style="@style/player_text_details"
                android:layout_marginTop="@dimen/dp20"
                app:layout_constraintEnd_toEndOf="@id/guideline3"
                app:layout_constraintStart_toStartOf="@id/guideline5"
                app:layout_constraintTop_toBottomOf="@id/duration_track"
                tools:text="@string/duration" />

            <TextView
                android:id="@+id/album"
                style="@style/player_text_details"
                app:layout_constraintEnd_toEndOf="@id/guideline3"
                app:layout_constraintStart_toStartOf="@id/guideline5"
                app:layout_constraintTop_toBottomOf="@id/duration"
                tools:text="@string/album" />

            <TextView
                android:id="@+id/year"
                style="@style/player_text_details"
                app:layout_constraintEnd_toEndOf="@id/guideline3"
                app:layout_constraintStart_toStartOf="@id/guideline5"
                app:layout_constraintTop_toBottomOf="@id/album"
                tools:text="@string/year" />

            <TextView
                android:id="@+id/genre"
                style="@style/player_text_details"
                app:layout_constraintEnd_toEndOf="@id/guideline3"
                app:layout_constraintStart_toStartOf="@id/guideline5"
                app:layout_constraintTop_toBottomOf="@id/year"
                tools:text="@string/genre" />

            <TextView
                android:id="@+id/country"
                style="@style/player_text_details"
                android:layout_marginBottom="@dimen/dp16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline3"
                app:layout_constraintStart_toStartOf="@id/guideline5"
                app:layout_constraintTop_toBottomOf="@id/genre"
                tools:text="@string/country" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay"
        android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sheet"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp12"
            android:text="@string/add_playlist"
            android:textColor="@color/text"
            android:textSize="@dimen/sp22" />

        <Button
            android:id="@+id/new_playlist"
            style="@style/Button_update"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:foreground="?attr/selectableItemBackground"
            android:paddingHorizontal="@dimen/dp12"
            android:text="@string/new_playlist" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp14"
            android:layout_marginTop="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_bottomsheet" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>