<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/track_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    app:flow_verticalAlign="center">

    <ImageView
        android:id="@+id/image_track"
        android:layout_width="@dimen/_45dp"
        android:layout_height="@dimen/_45dp"
        android:layout_marginVertical="@dimen/dp8"
        android:layout_marginStart="@dimen/dp14"
        android:contentDescription="@string/track_name"
        tools:background="@color/YPBlue" />

    <LinearLayout
        android:id="@+id/aaa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp12"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/track_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/item_text_color"
            android:textSize="@dimen/sp16"
            tools:text="@string/track_name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/track_item_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display_regular"
                android:maxLines="1"
                android:textColor="@color/item_band_text_color"
                android:textSize="@dimen/sp11"
                app:drawableEndCompat="@drawable/ic"
                tools:text="@string/track_artist" />

            <TextView
                android:id="@+id/item_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="@color/item_band_text_color"
                android:textSize="@dimen/sp11"
                tools:text="@string/track_time" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="@dimen/dp24"
        android:layout_height="@dimen/dp24"
        android:layout_marginVertical="@dimen/dp18"
        android:layout_marginEnd="@dimen/dp12"
        android:src="@drawable/arrow_forward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</LinearLayout>